--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo" />
                 <ul class="main-nav">
-                    <li><a href="#">Food delivery</a></li>
+                    <li><a href="#">Food deliverys</a></li>
                     <li><a href="#">How it works</a></li>
                     <li><a href="#">Our cities</a></li>
                     <li><a href="#">Sign up</a></li>
